--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -12,6 +12,7 @@
 
   @include clearfix();
   margin-bottom: 1em;
+  color: var(--site-text-color);
 
   @media screen and (min-width: $sidebar-screen-min-width) {
     height: 100vh;
@@ -95,7 +96,7 @@
 
     @include breakpoint($large) {
       padding: 5px;
-      border: 1px solid $border-color;
+      border: 1px solid var(--site-border-color);
     }
   }
 }
@@ -188,9 +189,9 @@
   margin-top: 15px;
   padding: 10px;
   list-style-type: none;
-  border: 1px solid $border-color;
+  border: 1px solid var(--site-border-color);
   border-radius: $border-radius;
-  background: $background-color;
+  background: var(--site-background-color);
   z-index: -1;
   box-shadow: 0 0 10px rgba(#000, 0.25);
   cursor: default;
@@ -214,7 +215,7 @@
     width: 0;
     border-style: solid;
     border-width: 0 10px 10px;
-    border-color: $border-color transparent;
+    border-color: var(--site-border-color) transparent;
     z-index: 0;
 
     @include breakpoint($large) {
@@ -231,7 +232,7 @@
     width: 0;
     border-style: solid;
     border-width: 0 10px 10px;
-    border-color: $background-color transparent;
+    border-color: var(--site-background-color) transparent;
     z-index: 1;
 
     @include breakpoint($large) {
