--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -68,6 +68,12 @@ $code-background-color-dark : #404040;
 $text-color                 : #f0f0f0;
 $border-color               : #4a4a4a;
 
+$light-background-color     : #eef2f6;
+$light-surface-color        : #ffffff;
+$light-text-color           : #20242a;
+$light-muted-text-color     : #4b5563;
+$light-border-color         : #d7dde5;
+
 $primary-color              : #a0a8b0;
 $success-color              : #7ed87e;
 $warning-color              : #ffab2e;
@@ -105,6 +111,8 @@ $xing-color                 : #006567;
 $link-color                 : #6bc5e0;
 $link-color-hover           : #8dd8ef;
 $link-color-visited         : #9dd0e5;
+$light-link-color           : #245f82;
+$light-link-color-hover     : #174765;
 $masthead-link-color        : #c8cdd3;
 $masthead-link-color-hover  : #ffffff;
 
